// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/Filter should render Filter correctly with all genres 1`] = `
<div>
  <ul
    aria-expanded="true"
    aria-label="Filter movies"
    class="filter"
    role="row"
  >
    <button
      class="filter__item filter__item--active"
    >
      All movies
    </button>
    <button
      class="filter__item"
    >
      Comedy
    </button>
    <button
      class="filter__item"
    >
      Drama
    </button>
    <button
      class="filter__item"
    >
      Crime
    </button>
    <button
      class="filter__item"
    >
      History
    </button>
    <button
      class="filter__item"
    >
      Less
    </button>
  </ul>
</div>
`;

exports[`src/components/Filter should render Filter correctly with popular genres 1`] = `
<div>
  <ul
    aria-expanded="false"
    aria-label="Filter movies"
    class="filter"
    role="row"
  >
    <button
      class="filter__item filter__item--active"
    >
      All movies
    </button>
    <button
      class="filter__item"
    >
      Comedy
    </button>
    <button
      class="filter__item"
    >
      Drama
    </button>
    <button
      class="filter__item"
    >
      More
    </button>
  </ul>
</div>
`;
